feat: stylesheets loading

--- a/web/core/templates/base.html
+++ b/web/core/templates/base.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>These Times</title>
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" />
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+    <link href="{{ url_for('core.static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('core.static', filename='css/style.css') }}" rel="stylesheet" />
+    <link rel="shortcut icon" href="{{ url_for('core.static', filename='img/favicon.ico') }}">
 
 
 </head>
@@ -80,7 +80,7 @@
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('core.static', filename='js/bootstrap.bundle.min.js') }}"></script>
 
 
 </body>
