feat: read article

--- a/web/core/templates/base.html
+++ b/web/core/templates/base.html
@@ -29,38 +29,21 @@
                 <li class="nav-item">
                     <a class="nav-link link-light" href="/news">News</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link link-light" href="/opinion">Opinion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link-light" href="/tech">Tech</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link-light" href="/sports">Sports</a>
-                </li>
+                {# <li class="nav-item"> #}
+                    {# <a class="nav-link link-light" href="/opinion">Other category</a> #}
+                    {# </li> #}
             </ul>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link link-light" href="/latest">Latest</a>
+                    {# <a class="nav-link link-light" href="/latest">Latest</a> #}
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link-light dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">Publications</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/pubs/nyt">The New York Times</a>
                         <a class="dropdown-item" href="/pubs/ft">Financial Times</a>
-                        <a class="dropdown-item" href="/pubs/wsj">The Wall Street Journal</a>
-                        <a class="dropdown-item" href="/pubs/dw">Deutsche Welle</a>
-                        <a class="dropdown-item" href="/pubs/bbc">BBC World</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/pubs/nyr">The New Yorker</a>
-                        <a class="dropdown-item" href="/pubs/econ">The Economist</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/pubs/sky">Sky Sports</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/pubs/ars">Ars Technica</a>
-                        <a class="dropdown-item" href="/pubs/mit">MIT Technology Review</a>
-
+                        {# <div class="dropdown-divider"></div> #}
+                        {# <a class="dropdown-item" href="/pubs/ft">Other Publication</a> #}
                     </div>
                 </li>
             </ul>
