--- a/web/core/templates/article.html
+++ b/web/core/templates/article.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-<h3 class="text-light">{{ a.title }}</h3>
-<p class="text-light">{{ a.source }} - {{ a.pubdate|print_date }}
+<h3 class="text-light">{{ article.title }}</h3>
+<p class="text-light">{{ article.publication_name }} - {{ article.published_date|date }}
     <br>
-    {{ a.author }} - <a class="link-light" href="{{ a.url }}">Original link</a>
+    {{ article.authors }} - <a class="link-light" href="{{ article.url }}">Original link</a>
 </p>
 
 
-{% for p in a.body %}
+{% for p in article.body %}
 <p class="text-light">{{ p }}</p>
 {% endfor %}
 
