--- a/service-web/core/templates/base.html
+++ b/service-web/core/templates/base.html
@@ -35,7 +35,7 @@
             </ul>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    {# <a class="nav-link link-light" href="/latest">Latest</a> #}
+                    <a class="nav-link link-light" href="/latest">Latest</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link-light dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
