--- a/service-web/core/templates/base.html
+++ b/service-web/core/templates/base.html
@@ -29,9 +29,12 @@
                 <li class="nav-item">
                     <a class="nav-link link-light" href="/news">News</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link link-light" href="/opinion">Opinion</a>
+                </li>
                 {# <li class="nav-item"> #}
                     {# <a class="nav-link link-light" href="/opinion">Other category</a> #}
-                    {# </li> #}
+                {# </li> #}
             </ul>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
