feat: added publication page

--- a/service-web/core/templates/base.html
+++ b/service-web/core/templates/base.html
@@ -44,8 +44,9 @@
                     <a class="nav-link link-light dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">Publications</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/pubs/ft">Financial Times</a>
-                        {# <div class="dropdown-divider"></div> #}
+                        <a class="dropdown-item" href="/publication/ft">Financial Times</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/publication/nyr">The New Yorker</a>
                         {# <a class="dropdown-item" href="/pubs/ft">Other Publication</a> #}
                     </div>
                 </li>
